# CRM-agent-langgraph

./: Readme.md  agent.py  main.py  pyproject.toml  trigger.py
Data/: crm_events.csv  emails.json
tools/: urgent_summary.py
utils/: crm.py  email_loader.py  replies.py  tone.py
