[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
  "uv"
]
build-backend = "setuptools.build_meta"

[project]
name = "nudge-agent"
version = "0.1.0"
description = "An agent system with DuckDB and GPT-based nudging"
authors = [ { name = "Your Name", email = "your@email.com" } ]
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.3.2,<1.4",
  "pandas",
  "langgraph",
  "langchain_community",
  "langchain-openai",
  "python-dotenv",
  "openai",
]

[project.scripts]
nudge-agent = "nudge_agent.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nudge_agent*"]
